--- a/build.gradle
+++ b/build.gradle
@@ -29,6 +29,8 @@ dependencies {
 	compile "com.google.appengine:appengine-api-1.0-sdk:${appengineVersion}"
 }
 
+sourceSets.main.output.classesDir = 'src/main/webapp/WEB-INF/classes'
+
 appengine {
 
     httpPort = 8888
